# CG4

./: CMakeLists.txt  LiteMath.h  Makefile  Mesh.h  Model.h  README.md  cmake_install.cmake  common.h  ds.cpp  ds2.cpp  fragment.glsl  fragmentwater.glsl  glad.c  lighting_frag.glsl  lighting_vert.glsl  main.cpp  matrix.h  normal_vertex.glsl  skyfrag.glsl  skyvertex.glsl  stb_image.h  vertex.glsl  vertexwater.glsl  water_normal_geometry.glsl  water_normal_vertex.glsl
dependencies2/GLLADD-stable/glad/include/glad/: glad.h
